src/objects/Ter_Codigos_Errores__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Ter_Codigo_Error__c</fullName>
        <description>Código del error</description>
        <inlineHelpText>Código del error</inlineHelpText>
        <label>Código Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Mensaje__c</fullName>
        <description>Mensaje asociado al código de error.</description>
        <inlineHelpText>Mensaje asociado al código de error.</inlineHelpText>
        <label>Mensaje</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Proceso__c</fullName>
        <description>Indica el proceso en el cual se usa el código de error</description>
        <label>Proceso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Códigos Errores</label>
</CustomObject>